@@ -1,6 +1,6 @@
 ---
 name: iCal-Parser-SAX
-version: 1.06
+version: 1.07
 author:
   - 'Rick Frankel, cpan@rickster.com'
 abstract: Generate SAX events from an iCalendar
@@ -20,5 +20,5 @@ build_requires:
 provides:
   iCal::Parser::SAX:
     file: lib/iCal/Parser/SAX.pm
-    version: 1.06
+    version: 1.07
 generated_by: Module::Build version 0.261
