@@ -1,0 +1,10 @@
+BEGIN:VCALENDAR
+VERSION:2.0
+PRODID:-//Testing//Test//EN
+BEGIN:VEVENT
+DTSTART;TZID=America/New_York:20041117T210000
+DTEND;TZID=America/New_York:20041117T210000
+UID:D5EEE785-3516-11D9-8A43-000D93C45D90
+DTSTAMP:20041113T220701Z
+END:VEVENT
+END:VCALENDAR
