@@ -1,0 +1,1 @@
+<ical><calendar prodid='-//Testing//Test//EN' x-wr-timezone='America/New_York' index='1' version='2.0' name='Calendar 1' id='1' /><events><year year='2004'><month month='11'><week week='45'><day date='2004-11-01' /><day date='2004-11-02' /><day date='2004-11-03' /><day date='2004-11-04' /><day date='2004-11-05' /><day date='2004-11-06' /><day date='2004-11-07' /></week><week week='46'><day date='2004-11-08' /><day date='2004-11-09' /><day date='2004-11-10' /><day date='2004-11-11' /><day date='2004-11-12' /><day date='2004-11-13' /><day date='2004-11-14' /></week><week week='47'><day date='2004-11-15' /><day date='2004-11-16' /><day date='2004-11-17'><event uid='D5EEE785-3516-11D9-8A43-000D93C45D90' idref='1'><hours>0.00</hours><dtstamp>2004-11-13T17:07:01</dtstamp><dtend>2004-11-17T21:00:00</dtend><dtstart>2004-11-17T21:00:00</dtstart></event></day><day date='2004-11-18' /><day date='2004-11-19' /><day date='2004-11-20' /><day date='2004-11-21' /></week><week week='48'><day date='2004-11-22' /><day date='2004-11-23' /><day date='2004-11-24' /><day date='2004-11-25' /><day date='2004-11-26' /><day date='2004-11-27' /><day date='2004-11-28' /></week><week week='49'><day date='2004-11-29' /><day date='2004-11-30' /><day date='2004-12-01' /><day date='2004-12-02' /><day date='2004-12-03' /><day date='2004-12-04' /><day date='2004-12-05' /></week></month></year></events></ical>
