@@ -1,3 +1,7 @@
+2005-06-19  Rick Frankel  <rick@gg5.local>
+
+	* lib/iCal/Parser/SAX.pm (process_day): fix issue with 0 hour events
+
 2005-06-11  Rick Frankel  <rick@gg5.local>
 
 	* lib/iCal/Parser/SAX.pm (process_events): fix bad (string)
